--- a/dialogflowv2.html
+++ b/dialogflowv2.html
@@ -88,6 +88,10 @@
         type: 'dialogflowv2-token',
         required: true
       },
+      action: {
+      	value: '_detectIntent_',
+      	required: true
+      },
       language: {
         value: 'en',
         required: true
@@ -95,9 +99,14 @@
       debug: {
         value: false
       },
-      variable: {
-        value: 'topic'
-      }
+      entityname: {
+        value: '',
+        type: "text",
+        required: true
+      },
+      merge: {
+        value: true
+      },
     },
     inputs: 1,
     outputs: 1,
@@ -105,95 +114,130 @@
     icon: 'chatbot-ai.png',
     label: function() {
       return this.name || 'Dialogflow.com';
+    },
+    oneditprepare: function() {
+      $("#node-input-action").on("change",function() {
+          if (this.value == "_detectIntent_") {
+              $("#detectIntent-details").show();
+              $("#batchUpdateEntities-details").hide();
+          } else if (this.value == "_batchUpdateEntities_") {
+              $("#detectIntent-details").hide();
+              $("#batchUpdateEntities-details").show();
+          }
+      }).trigger("change");
+
+      if (this.action == "_detectIntent_") {
+        $("#node-input-action").val("_detectIntent_");
+      } else if (this.action == "_batchUpdateEntities_"){
+        $("#node-input-action").val("_batchUpdateEntities_");
+      }
     }
   });
 </script>
 
 <script type="text/x-red" data-template-name="dialogflowv2">
   <div class="form-row">
-    <label for="node-input-recast">Token</label>
-    <input type="text" id="node-input-dialogflow" placeholder="Dialogflow.com access token">
+    <label for="node-input-dialogflow">Token</label>
+    <input type="text" id="node-input-dialogflow">
   </div>
   <div class="form-row">
-    <label for="node-input-">Language</label>
-    <select id="node-input-language" placeholder="Choose a Language...">
-      <option value="af">Afrikanns</option>
-      <option value="sq">Albanian</option>
-      <option value="ar">Arabic</option>
-      <option value="hy">Armenian</option>
-      <option value="eu">Basque</option>
-      <option value="bn">Bengali</option>
-      <option value="bg">Bulgarian</option>
-      <option value="ca">Catalan</option>
-      <option value="km">Cambodian</option>
-      <option value="zh">Chinese (Mandarin)</option>
-      <option value="hr">Croation</option>
-      <option value="cs">Czech</option>
-      <option value="da">Danish</option>
-      <option value="nl">Dutch</option>
-      <option value="en">English</option>
-      <option value="et">Estonian</option>
-      <option value="fj">Fiji</option>
-      <option value="fi">Finnish</option>
-      <option value="fr">French</option>
-      <option value="ka">Georgian</option>
-      <option value="de">German</option>
-      <option value="el">Greek</option>
-      <option value="gu">Gujarati</option>
-      <option value="he">Hebrew</option>
-      <option value="hi">Hindi</option>
-      <option value="hu">Hungarian</option>
-      <option value="is">Icelandic</option>
-      <option value="id">Indonesian</option>
-      <option value="ga">Irish</option>
-      <option value="it">Italian</option>
-      <option value="js">Japanese</option>
-      <option value="jw">Javanese</option>
-      <option value="ko">Korean</option>
-      <option value="la">Latin</option>
-      <option value="lv">Latvian</option>
-      <option value="lt">Lithuanian</option>
-      <option value="mk">Macedonian</option>
-      <option value="ms">Malay</option>
-      <option value="ml">Malayalam</option>
-      <option value="mt">Maltese</option>
-      <option value="mi">Maori</option>
-      <option value="mr">Marathi</option>
-      <option value="mn">Mongolian</option>
-      <option value="ne">Nepali</option>
-      <option value="no">Norwegian</option>
-      <option value="fa">Persian</option>
-      <option value="pl">Polish</option>
-      <option value="pt">Portuguese</option>
-      <option value="pa">Punjabi</option>
-      <option value="qu">Quechua</option>
-      <option value="ro">Romanian</option>
-      <option value="ru">Russian</option>
-      <option value="sm">Samoan</option>
-      <option value="sr">Serbian</option>
-      <option value="sk">Slovak</option>
-      <option value="sl">Slovenian</option>
-      <option value="es">Spanish</option>
-      <option value="sw">Swahili</option>
-      <option value="sv">Swedish</option>
-      <option value="ta">Tamil</option>
-      <option value="tt">Tatar</option>
-      <option value="te">Telugu</option>
-      <option value="th">Thai</option>
-      <option value="bo">Tibetan</option>
-      <option value="to">Tonga</option>
-      <option value="tr">Turkish</option>
-      <option value="uk">Ukranian</option>
-      <option value="ur">Urdu</option>
-      <option value="uz">Uzbek</option>
-      <option value="vi">Vietnamese</option>
-      <option value="cy">Welsh</option>
-      <option value="xh">Xhosa</option>
+    <label for="node-input-action">Action</label>
+    <select id="node-input-action">
+    	<option value="_detectIntent_">detectIntent</option>
+    	<option value="_batchUpdateEntities_">batchUpdateEntities</option>
     </select>
   </div>
-  <div class="form-row">
-    <label for="node-input-variable">Store <em>intent</em> in</label>
-    <input type="text" id="node-input-variable" placeholder="Variable name">
+  <div id="detectIntent-details">
+    <div class="form-row">
+      <label for="node-input-language">Language</label>
+      <select id="node-input-language" placeholder="Choose a Language...">
+        <option value="af">Afrikanns</option>
+        <option value="sq">Albanian</option>
+        <option value="ar">Arabic</option>
+        <option value="hy">Armenian</option>
+        <option value="eu">Basque</option>
+        <option value="bn">Bengali</option>
+        <option value="bg">Bulgarian</option>
+        <option value="ca">Catalan</option>
+        <option value="km">Cambodian</option>
+        <option value="zh">Chinese (Mandarin)</option>
+        <option value="hr">Croation</option>
+        <option value="cs">Czech</option>
+        <option value="da">Danish</option>
+        <option value="nl">Dutch</option>
+        <option value="en">English</option>
+        <option value="et">Estonian</option>
+        <option value="fj">Fiji</option>
+        <option value="fi">Finnish</option>
+        <option value="fr">French</option>
+        <option value="ka">Georgian</option>
+        <option value="de">German</option>
+        <option value="el">Greek</option>
+        <option value="gu">Gujarati</option>
+        <option value="he">Hebrew</option>
+        <option value="hi">Hindi</option>
+        <option value="hu">Hungarian</option>
+        <option value="is">Icelandic</option>
+        <option value="id">Indonesian</option>
+        <option value="ga">Irish</option>
+        <option value="it">Italian</option>
+        <option value="js">Japanese</option>
+        <option value="jw">Javanese</option>
+        <option value="ko">Korean</option>
+        <option value="la">Latin</option>
+        <option value="lv">Latvian</option>
+        <option value="lt">Lithuanian</option>
+        <option value="mk">Macedonian</option>
+        <option value="ms">Malay</option>
+        <option value="ml">Malayalam</option>
+        <option value="mt">Maltese</option>
+        <option value="mi">Maori</option>
+        <option value="mr">Marathi</option>
+        <option value="mn">Mongolian</option>
+        <option value="ne">Nepali</option>
+        <option value="no">Norwegian</option>
+        <option value="fa">Persian</option>
+        <option value="pl">Polish</option>
+        <option value="pt">Portuguese</option>
+        <option value="pa">Punjabi</option>
+        <option value="qu">Quechua</option>
+        <option value="ro">Romanian</option>
+        <option value="ru">Russian</option>
+        <option value="sm">Samoan</option>
+        <option value="sr">Serbian</option>
+        <option value="sk">Slovak</option>
+        <option value="sl">Slovenian</option>
+        <option value="es">Spanish</option>
+        <option value="sw">Swahili</option>
+        <option value="sv">Swedish</option>
+        <option value="ta">Tamil</option>
+        <option value="tt">Tatar</option>
+        <option value="te">Telugu</option>
+        <option value="th">Thai</option>
+        <option value="bo">Tibetan</option>
+        <option value="to">Tonga</option>
+        <option value="tr">Turkish</option>
+        <option value="uk">Ukranian</option>
+        <option value="ur">Urdu</option>
+        <option value="uz">Uzbek</option>
+        <option value="vi">Vietnamese</option>
+        <option value="cy">Welsh</option>
+        <option value="xh">Xhosa</option>
+      </select>
+    </div>
+  </div>
+  <div id="batchUpdateEntities-details">
+    <div class="form-row">
+      <label for="node-input-entityname">Entity Name</label>
+      <input type="text" id="node-input-entityname" placeholder="@entity"/>
+    </div>
+    <div class="form-row">
+        <label for="node-input-merge">Keep Existing</label>
+        <input type="checkbox" id="node-input-merge" value="true"/>
+        <span class="redbot-form-hint">
+            Keep existing entities and merge with newly added ones
+          </span>
+      </div>
   </div>
   <div class="form-row">
     <label for="node-input-debug">Debug</label>
